// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratorSection component tests matches snapshot 1`] = `
<Row
  gutter={24}
>
  <Col
    lg={16}
  >
    <div
      className="mb-8 text-subheader font-700"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.generator.title"
      />
    </div>
    <p
      className="mb-24"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.generator.subTitle"
      />
    </p>
    <div
      className="d-flex align-items-center"
    >
      <Switch
        checked={false}
        onChange={[MockFunction]}
      />
      <span
        className="ml-8"
      >
        <Memo(FormattedMessage)
          id="addNewCamper.tripFees.generator.gasGenerator"
        />
      </span>
    </div>
  </Col>
</Row>
`;

exports[`GeneratorSection component tests matches snapshot for limited mode 1`] = `
<Row
  gutter={24}
>
  <Col
    lg={16}
  >
    <div
      className="mb-8 text-subheader font-700"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.generator.title"
      />
    </div>
    <p
      className="mb-24"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.generator.subTitle"
      />
    </p>
    <div
      className="d-flex align-items-center"
    >
      <Switch
        checked={true}
        onChange={[MockFunction]}
      />
      <span
        className="ml-8"
      >
        <Memo(FormattedMessage)
          id="addNewCamper.tripFees.generator.gasGenerator"
        />
      </span>
    </div>
    <FormItem
      className="mt-16 mb-0"
    >
      <Memo(ForwardRef)
        className="radio_wrapper"
        onChange={[MockFunction]}
        size="large"
        value="limited"
      >
        <div
          className="mb-20"
        >
          <Radio
            type="radio"
            value="unlimited"
          >
            <span
              className="ml-12"
            >
              <Memo(FormattedMessage)
                id="addNewCamper.tripFees.generator.allowUnlimited"
              />
            </span>
            <Tag
              className="mt-12 mt-md-0 ml-12 ml-md-8"
              color="cyan"
              icon={
                <i
                  className="icon icon-like-f"
                />
              }
            >
              <Memo(FormattedMessage)
                id="shared.vancationRecommended"
              />
            </Tag>
          </Radio>
        </div>
        <div>
          <Radio
            type="radio"
            value="limited"
          >
            <span
              className="ml-12"
            >
              <Memo(FormattedMessage)
                id="addNewCamper.tripFees.generator.ownRate"
              />
            </span>
          </Radio>
        </div>
      </Memo(ForwardRef)>
    </FormItem>
    <Row
      className="mt-16"
      gutter={
        Array [
          24,
          16,
        ]
      }
    >
      <Col
        md={12}
      >
        <div
          className="main-input-wrap-addtxt-extended"
        >
          <Field
            className="main-input__field"
            component={[Function]}
            formItemClasses="mb-0"
            id="generator.included"
            label={
              Object {
                "id": "addNewCamper.tripFees.mileage.includedHours",
              }
            }
            name="generator.included"
            placeholder="0"
            type="number"
          />
          <span
            className="main-input__add-txt main-input__add-txt-ext"
          >
            <Memo(FormattedMessage)
              id="addNewCamper.tripFees.perDay"
            />
          </span>
        </div>
      </Col>
      <Col
        md={12}
      >
        <div
          className="main-input-wrap-addtxt main-input-wrap-addtxt-extended"
        >
          <Field
            component={[Function]}
            formItemClasses="mb-0"
            id="generator.overage"
            label={
              Object {
                "id": "addNewCamper.tripFees.overageCharge",
              }
            }
            name="generator.overage"
            placeholder="0"
            prefix="$"
            type="number"
          />
          <span
            className="main-input__add-txt main-input__add-txt-ext"
          >
            <Memo(FormattedMessage)
              id="addNewCamper.tripFees.perHour"
            />
          </span>
        </div>
      </Col>
    </Row>
  </Col>
</Row>
`;

exports[`GeneratorSection component tests matches snapshot when gas generator 1`] = `
<Row
  gutter={24}
>
  <Col
    lg={16}
  >
    <div
      className="mb-8 text-subheader font-700"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.generator.title"
      />
    </div>
    <p
      className="mb-24"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.generator.subTitle"
      />
    </p>
    <div
      className="d-flex align-items-center"
    >
      <Switch
        checked={true}
        onChange={[MockFunction]}
      />
      <span
        className="ml-8"
      >
        <Memo(FormattedMessage)
          id="addNewCamper.tripFees.generator.gasGenerator"
        />
      </span>
    </div>
    <FormItem
      className="mt-16 mb-0"
    >
      <Memo(ForwardRef)
        className="radio_wrapper"
        onChange={[MockFunction]}
        size="large"
        value="unlimited"
      >
        <div
          className="mb-20"
        >
          <Radio
            type="radio"
            value="unlimited"
          >
            <span
              className="ml-12"
            >
              <Memo(FormattedMessage)
                id="addNewCamper.tripFees.generator.allowUnlimited"
              />
            </span>
            <Tag
              className="mt-12 mt-md-0 ml-12 ml-md-8"
              color="cyan"
              icon={
                <i
                  className="icon icon-like-f"
                />
              }
            >
              <Memo(FormattedMessage)
                id="shared.vancationRecommended"
              />
            </Tag>
          </Radio>
        </div>
        <div>
          <Radio
            type="radio"
            value="limited"
          >
            <span
              className="ml-12"
            >
              <Memo(FormattedMessage)
                id="addNewCamper.tripFees.generator.ownRate"
              />
            </span>
          </Radio>
        </div>
      </Memo(ForwardRef)>
    </FormItem>
  </Col>
</Row>
`;
